@@ -2,11 +2,8 @@ AUX 0.8-r1/confd 2870 RMD160 2ac3764bd0d2df507895832e8642c1f372c90064 SHA1 e1c8d
 AUX 0.8-r1/initd 2664 RMD160 fbace6642fd3d8a6f062ccac37ee60494049f322 SHA1 b001a7c815e627b1f12e170d7a2e6605bf39997e SHA256 8642a30eac4d66d7ecf2c97177757ab6e1a98e9285fe3138227ea61c59abe1b8
 AUX 0.8-r1/moblock-stats 1151 RMD160 91ff2ec3bd73426966139bc3cf4bfa1f151131af SHA1 99f7c94f509652482e887bcd8325ce96e7e6d66e SHA256 a4dabea254e10ce8d80546e55c7b98e2cf36b8b8e76bb69a423d3a3b07ee6532
 AUX 0.8-r1/moblock-update 3915 RMD160 3471581a8b09c69bfcb6bc9e96aa46f6a82ff72d SHA1 37c7f830aa1413b2ad5f130cfa59142d0277047b SHA256 812d20305f78bfa3b2b74c474648b3aa5de2982c6a3de9b0fc5f0e716b72246e
-AUX confd 413 RMD160 18c2e24e5d4806d7b4941588581f505d88816ce8 SHA1 14064540969b27377557552edebd99fd60f97041 SHA256 a463f9078de42566b166bda491a65aedb4eb5145c49f784706c4071fee86769a
-AUX initd 2409 RMD160 f621fae5624e565f24a1430b5ab865d57a2fe031 SHA1 6aea2787ad08c6bdc6f254ce9cd4a8f1bc8336d1 SHA256 13a14c0ebb504ff3f9695675412cc045c9819e4fda862494e3af600ea95e0402
 AUX moblock-0.8-makefile.patch 825 RMD160 1fc36ed1c33267a391d2daffaff5c60043c69017 SHA1 260c99a69a6aa7a3df697330898783b98e72e072 SHA256 0d780e33c7f762d62ee9223b072b3ac0ccbf52e81934a4d505933528b3d48ca7
 DIST MoBlock-0.8-i586.tar.bz2 18553 RMD160 2190cfb55977ad23176ddb43e410ee5d9293a518 SHA1 e9e7b47622eb606b6c429fc507fc50d0c037487e SHA256 30d6d56fe72606ffa308fb8e6edd44c2b1806dfa4da8a13bde046964601fd904
-EBUILD moblock-0.8-r1.ebuild 2541 RMD160 68aa7785574da4cdc5a6978e8db3ede09a308ddc SHA1 f0f8182222c9e10d03528b11b579678d38ba650e SHA256 91049d9ca545961481dfc554f6d223b551ef6da02bb9d3c1a0909a989b2c4ff4
-EBUILD moblock-0.8.ebuild 958 RMD160 f2844ed2d1780f9519117befc88903275563582d SHA1 1515eeadc32f23e07ec6efcbd5c170e3fd5bee87 SHA256 b2c76355c9b33fbcf3b17c11481eaacaa68d8a8c33061be5b1d04e938b54e88f
-MISC ChangeLog 1626 RMD160 637113493583061e64ee21a52d72b1c0832371c6 SHA1 8dd3bcf9961e7c5b326d7045d56c6b92e9032ad5 SHA256 d35e713e429e327eeaf2d1d11dcee660d22f5ed46de721a8edc88b8b7bfad229
+EBUILD moblock-0.8-r1.ebuild 1618 RMD160 40ce56f06b82b69efd83557dc6c3d58ad2239704 SHA1 4e420eb5e35bc12a395de21ebe7a896d3b1c34e1 SHA256 37eaa49b705ec660a12112641414247ea6ffcf062d47b0d0b7cc4808ba5e63c2
+MISC ChangeLog 1856 RMD160 b04edc4b50cbf675fa2c3bb6b9d3ccf5c3f57f80 SHA1 38ddeb33c6a28b7e27b7663803e4a291dff1ad3e SHA256 f61afc4446dc165752cba559c4a34e48a49c98c1d8cf35c344270a5face5ddc5
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
