@@ -1,19 +1,0 @@
-
-ACTIVATE_CHAINS=1
-WHITE_TCP_IN=""
-WHITE_UDP_IN=""
-WHITE_TCP_OUT=""
-WHITE_UDP_OUT=""
-WHITE_TCP_FORWARD=""
-WHITE_UDP_FORWARD=""
-
-TARGET="NFQUEUE"
-
-PIDFILE="/var/run/moblock.pid"
-LOGFILE="/var/log/moblock.log"
-
-# -d      blocklist is an ipfilter.dat file
-# -n      blocklist is a peerguardian 2.x file (.p2b)
-# -p      blocklist is a peerguardian file (.p2p)
-BLOCKLISTTYPE="-n"
-BLOCKLISTFILE="/etc/moblock/p2p.p2b"
