@@ -1,93 +1,0 @@
-#!/sbin/runscript
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-checkconfig() {
-        if [ ! -f "${BLOCKLISTFILE}" ]; then
-                eerror "Configuration file ${BLOCKLISTFILE} not found"
-                return 1
-        fi
-}
-
-start() {
-	checkconfig || return 1
-
-	ebegin "Starting MoBlock"
-	
-	modprobe ipt_NFQUEUE
-
-	# Filter all traffic, edit for your needs
-
-	iptables -N MOBLOCK_IN
-	iptables -N MOBLOCK_OUT
-	iptables -N MOBLOCK_FW
-
-	if [ ${ACTIVATE_CHAINS} -eq 1 ]; then
-		iptables -I INPUT -p all -m state --state NEW -j MOBLOCK_IN
-		iptables -I OUTPUT -p all -m state --state NEW -j MOBLOCK_OUT
-		iptables -I FORWARD -p all -m state --state NEW -j MOBLOCK_FW	
-	fi
-
-	iptables -I MOBLOCK_IN -p all -j ${TARGET}
-	iptables -I MOBLOCK_OUT -p all -j ${TARGET}
-	iptables -I MOBLOCK_FW -p all -j ${TARGET}
-
-	for PORT in ${WHITE_TCP_OUT}; do
-		iptables -I MOBLOCK_OUT -p tcp --dport ${PORT} -j ACCEPT
-	done
-	for PORT in ${WHITE_UDP_OUT}; do
-		iptables -I MOBLOCK_OUT -p udp --dport ${PORT} -j ACCEPT
-	done
-
-	for PORT in ${WHITE_TCP_IN}; do
-		iptables -I MOBLOCK_IN -p tcp --dport ${PORT} -j ACCEPT
-	done
-	for PORT in ${WHITE_UDP_IN}; do
-		iptables -I MOBLOCK_IN -p udp --dport ${PORT} -j ACCEPT
-	done
-
-	for PORT in ${WHITE_TCP_FORWARD}; do
-		iptables -I MOBLOCK_FW -p tcp --dport ${PORT} -j ACCEPT
-	done
-	for PORT in ${WHITE_UDP_FORWARD}; do
-		iptables -I MOBLOCK_FW -p udp --dport ${PORT} -j ACCEPT
-	done
-
-
-	# Loopback traffic fix
-
-	iptables -I INPUT -p all -i lo -j ACCEPT
-	iptables -I OUTPUT -p all -o lo -j ACCEPT
-
-	# Here you can change block list and log files
-
-	start-stop-daemon --start --quiet --background --pidfile ${PIDFILE} \
-		--exec /usr/sbin/moblock -- ${BLOCKLISTTYPE} "${BLOCKLISTFILE}" "${LOGFILE}"
-	eend ${?}
-}
-
-stop() {
-	
-	ebegin "Stopping MoBlock"
-	start-stop-daemon --stop --pidfile ${PID}
-	eend ${?}
-	
-	# On exit delete the rules we added
-
-	if [ ${ACTIVATE_CHAINS} -eq 1 ]; then
-		iptables -D INPUT -p all -m state --state NEW -j MOBLOCK_IN
-		iptables -D OUTPUT -p all -m state --state NEW -j MOBLOCK_OUT
-		iptables -D FORWARD -p all -m state --state NEW -j MOBLOCK_FW
-	fi
-
-	iptables -D INPUT -p all -i lo -j ACCEPT
-	iptables -D OUTPUT -p all -o lo -j ACCEPT
-
-	iptables -F MOBLOCK_IN
-	iptables -X MOBLOCK_IN
-	iptables -F MOBLOCK_OUT
-	iptables -X MOBLOCK_OUT
-	iptables -F MOBLOCK_FW
-	iptables -X MOBLOCK_FW
-}
